--- a/impl_1/spin_clock_impl_1_summary.html
+++ b/impl_1/spin_clock_impl_1_summary.html
@@ -30,19 +30,19 @@
 <TD class='td_2_1' rowspan=1 colspan=1>Device Family:</TD>
 <TD class='td_2_2' rowspan=1 colspan=1>iCE40UP</TD>
 <TD class='td_2_3' rowspan=1 colspan=1>Timing Errors:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1><font COLOR=red>Place & Route, 4 (setup), 0 (hold)</font></TD>
+<TD class='td_2_2' rowspan=1 colspan=1></TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>Device Type:</TD>
 <TD class='td_1_2' rowspan=1 colspan=1>iCE40UP5K</TD>
 <TD class='td_1_3' rowspan=1 colspan=1>Project Created:</TD>
-<TD class='td_1_2' rowspan=1 colspan=1>2019/08/12 00:24:55</TD>
+<TD class='td_1_2' rowspan=1 colspan=1>2019/08/29 14:31:31</TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_2_1' rowspan=1 colspan=1>Package Type:</TD>
 <TD class='td_2_2' rowspan=1 colspan=1>SG48</TD>
 <TD class='td_2_3' rowspan=1 colspan=1>Project Updated:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1>2019/08/25 11:06:34</TD>
+<TD class='td_2_2' rowspan=1 colspan=1>2019/08/29 14:31:31</TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>Project File:</TD>
@@ -59,15 +59,15 @@
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>LUT4:</TD>
-<TD class='td_1_2' rowspan=1 colspan=1>448</TD>
+<TD class='td_1_2' rowspan=1 colspan=1>4273</TD>
 <TD class='td_1_3' rowspan=1 colspan=1>IO Buffers:</TD>
-<TD class='td_1_2' rowspan=1 colspan=1>1</TD>
+<TD class='td_1_2' rowspan=1 colspan=1>2</TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_2_1' rowspan=1 colspan=1>PFU Register:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1>193</TD>
+<TD class='td_2_2' rowspan=1 colspan=1>736</TD>
 <TD class='td_2_3' rowspan=1 colspan=1>EBR:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1>0</TD>
+<TD class='td_2_2' rowspan=1 colspan=1>2</TD>
 </TR>
 </small></TABLE>
 </DIV><BR>
