--- a/impl_1/spin_clock_impl_1_summary.html
+++ b/impl_1/spin_clock_impl_1_summary.html
@@ -30,19 +30,19 @@
 <TD class='td_2_1' rowspan=1 colspan=1>Device Family:</TD>
 <TD class='td_2_2' rowspan=1 colspan=1>iCE40UP</TD>
 <TD class='td_2_3' rowspan=1 colspan=1>Timing Errors:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1></TD>
+<TD class='td_2_2' rowspan=1 colspan=1><font COLOR=red>Place & Route, 1130 (setup), 1 (hold)</font></TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>Device Type:</TD>
 <TD class='td_1_2' rowspan=1 colspan=1>iCE40UP5K</TD>
 <TD class='td_1_3' rowspan=1 colspan=1>Project Created:</TD>
-<TD class='td_1_2' rowspan=1 colspan=1>2019/08/29 14:31:31</TD>
+<TD class='td_1_2' rowspan=1 colspan=1>2019/08/12 00:24:55</TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_2_1' rowspan=1 colspan=1>Package Type:</TD>
 <TD class='td_2_2' rowspan=1 colspan=1>SG48</TD>
 <TD class='td_2_3' rowspan=1 colspan=1>Project Updated:</TD>
-<TD class='td_2_2' rowspan=1 colspan=1>2019/08/29 14:31:31</TD>
+<TD class='td_2_2' rowspan=1 colspan=1>2019/08/29 14:29:07</TD>
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>Project File:</TD>
@@ -59,7 +59,7 @@
 </TR>
 <TR class='tr_border_bottom'>
 <TD class='td_1_1' rowspan=1 colspan=1>LUT4:</TD>
-<TD class='td_1_2' rowspan=1 colspan=1>4273</TD>
+<TD class='td_1_2' rowspan=1 colspan=1>4409</TD>
 <TD class='td_1_3' rowspan=1 colspan=1>IO Buffers:</TD>
 <TD class='td_1_2' rowspan=1 colspan=1>2</TD>
 </TR>
